--- a/src/components/IconCard.css
+++ b/src/components/IconCard.css
@@ -1,11 +1,11 @@
 .mainStyle {
-    max-width: 55%;
+    max-width: 80%;
     margin: auto;
+    margin-bottom: 10%;
     padding: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    background-image: url(https://images6.alphacoders.com/673/thumb-1920-673476.jpg);
-  }
+}
